	tree.
	* libdtrace/Build (%.sed): Use it instead of a direct uname -r
	invocation.
	* dtrace-utils.spec (%build): Set it, pointing at any suitable
	kernel devel package.
	(kver_min): New, minimum kernel version this userspace works with.
	(kver_max): New, maximum kernel version this userspace works with.
	(BuildRequires): Require an appropriate development kernel, for
	header substitutions.

2012-09-11  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_proc.h (dt_proc.hash_t): New members
	dph_destroy_lock and dph_destroy_locked.
	* libdtrace/dt_proc.c (dt_proc_hash_create): Initialize the lock.
	(dt_proc_hash_destroy): Take it out around proc destruction...
	(dt_proc_control): ... and around control thread termination.
	Erase ourselves from the lrulist here...
	(dt_proc_control_cleanup): ... not here.

	* libdtrace/dt_impl.h (DT_DM_KERN_UNLOADED): New module flag.
	* libdtrace/dt_module.c (dt_kern_module_find): Set it.  Never
	point non-kernel-modules at dtrace_ctf.
	(dt_module_load): Return without loading ELF symbol table only for
	loaded kernel modules.
	(dtrace_lookup_by_name): Look up symbols in dt_kernsyms only
	if loaded: otherwise, use ELF lookup.
	(dtrace_lookup_by_addr): Always error for non-loaded kernel
	modules.
	(dtrace_symbol_type): Likewise.
	* test/unittest/types/tst.unloaded.d: Verify that casting to types
	in unloaded kernel modules works.
	* test/unittest/types/err.unloaded_var.d: Verify that using
	variables in unloaded kernel modules does not work.

	* runtest.sh: Add @@quiet for modules whose removal should not
	be commented on.  Log skips.
	* test/modules: Add ext3, hidden.
	* test/unittest/misc/tst.include.sh: Skip it.

	* libdtrace/Build: Use Bison as the parser generator.

	* libdtrace/dt_pcb.h (pcb_xlator_input): New.
	(pcb_array_dimens): Likewise.
	* libdtrace/dt_grammar.y (translator_input_type): New, type_name with
	pcb_xlator_input flipped on beforehand.
	(translator_close_paren): Flip pcb_xlator_input off again.